<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="string_address_manager">地址管理</string>
    <string name="string_dialog_confirm_address">确定选择该地址?</string>
    <string name="string_confirm">确定</string>
    <string name="string_please_choose">请选择</string>
    <string name="string_tips">提示</string>
    <string name="string_load_error">加载失败</string>
    <string name="string_save">保存</string>
    <string name="string_follow">关注</string>
    <string name="string_dialog_delete_address">是否删除地址</string>
    <string name="string_delete_ing">删除中</string>
    <string name="string_save_ing">保存中</string>
    <string name="string_solitaire">接龙</string>
    <string name="string_publish_update_ing_tips">你还有视频正在上传中，别急着发新的哦</string>
    <string name="string_net_unavailable">网络连接不可用</string>
    <string name="string_renew_send">重新发送</string>
    <string name="string_error_phone_input">请输入正确的手机号</string>
    <string name="string_code_has_send">验证码已发送</string>
    <string name="string_second_60">60秒</string>
    <string name="string_second_format">%1$d秒</string>
    <string name="string_code_send_error">短信验证码发送失败</string>
    <string name="string_publish_wait_edit">有作品正在上传，等待完成后再继续创作鸭</string>
    <string name="string_cancel">取消</string>
    <string name="string_upload_wait">上传中</string>
    <string name="string_solitaire_all">全部接龙</string>
    <string name="string_bind_phone_success">手机号绑定成功</string>
    <string name="string_minus_video_with_user">将为你减少此类视频</string>
    <string name="string_operating_error">操作失败</string>
    <string name="string_open_file_write">请开启访问文件权限</string>
    <string name="string_loading">加载中...</string>
    <string name="string_downloading">下载中...</string>
    <string name="string_download_failed">下载失败，稍后请重试</string>
    <string name="string_video_download_error_with_copyright">该视频由于版权原因无法下载</string>
    <string name="string_video_save_format">视频已保存至%1$s文件中</string>
    <string name="string_pic_save_format">图片已保存至%1$s文件中</string>
    <string name="string_confirm_change">确认修改</string>
    <string name="string_save_photo_success">已保存至本地相册</string>
    <string name="string_save_photo_error">保存失败</string>
    <string name="string_not_change_topic_error">已选定话题不可修改，\n可重新发布视频和选择话题哦</string>
    <string name="string_beyound_length">超出字数限制</string>
    <string name="string_no_have_video_title_error">不给你的视频写个标题吗？</string>
    <string name="string_can_not_find_vieo_error">视频不知道去哪鸭，选个话题吧</string>
    <string name="string_not_change_content_error">您没有修改任何内容</string>
    <string name="string_change_error">修改失败</string>
    <string name="string_un_subscription_success">取消订阅成功</string>
    <string name="string_un_subscription_error">取消订阅失败</string>
    <string name="string_subscription_success">订阅成功</string>
    <string name="string_subscription_error">订阅失败</string>
    <string name="string_subscription">订阅</string>
    <string name="string_has_subscription">已订阅</string>
    <string name="string_video_number_format">%1$s个视频</string>
    <string name="string_video_subscription_format">%1$s个订阅</string>
    <string name="string_subscription_format">%1$d&#160;订阅</string>
    <string name="string_video_subscription_people_format">%1$s人订阅</string>
    <string name="string_video_solitaire_format">%1$s个接龙</string>
    <string name="string_go_solitaire_tips">快去接龙吧，下一个推荐的就是你</string>
    <string name="string_send_face_with_wechat">作为表情发送给微信好友</string>
    <string name="string_share_pic_withwechat">分享图片给微信好友</string>
    <string name="string_share_pic_with_qq">分享图片给QQ好友</string>
    <string name="string_pic_max_length_error">图片大小超过限制无法发送</string>
    <string name="string_setting">设置</string>
    <string name="string_guide_permission">当前应用缺少必要权限，请点击“设置”-“权限”-打开所需权限</string>
    <string name="string_not_has_camera_permission_error">还有未授予刷刷的权限，是无法完成拍摄的，快去手机设置里开启授权，等你回来～</string>
    <string name="string_string_go_to_setting">去设置</string>
    <string name="string_video_create_error_format">糟糕，生成视频失败 code=%1$s</string>
    <string name="string_video_crop_error_format">糟糕，裁剪视频失败 code=%1$s</string>
    <string name="string_gif_error_format">糟糕，生成GIF失败 code=%1$s</string>
    <string name="string_craete_gif_ing">正在生成GIF...</string>
    <string name="string_create_video_crop">正在裁剪</string>
    <string name="string_create_face_package">制作表情包</string>
    <string name="string_video_crop_ing">裁切中...</string>
    <string name="string_edit_pic">编辑图片</string>
    <string name="string_pic_load_error">图片加载失败</string>
    <string name="string_content_has_to_board">内容已复制到粘贴板</string>
    <string name="string_logout_success">注销用户成功</string>
    <string name="string_please_stant_app">请重新启动app</string>
    <string name="string_video_path_error">视频路径错误</string>
    <string name="string_edit_address">编辑地址</string>
    <string name="string_please_input_user_address">请填写收货人姓名</string>
    <string name="string_please_input_phone">请填写手机号</string>
    <string name="string_please_input_detailed_address">请填写详细地址</string>
    <string name="string_please_input_correct_email">请输入正确的邮编</string>
    <string name="string_confirm_edit">确认放弃编辑吗？</string>
    <string name="string_data_saveing">资料保存中...</string>
    <string name="string_avatar_upload_ing">上传头像中...</string>
    <string name="string_change_profile_data">编辑资料</string>
    <string name="string_give_up">放弃</string>
    <string name="string_male">男</string>
    <string name="string_female">女</string>
    <string name="string_edit_signature">编辑签名</string>
    <string name="string_edit_nikename">编辑昵称</string>
    <string name="string_un_follow_error">取消关注失败</string>
    <string name="string_un_follow_success">取消关注成功</string>
    <string name="string_follow_error">关注失败</string>
    <string name="string_get_video_error">获取视频失败</string>
    <string name="string_long_press_face_package">长按制作表情包</string>
    <string name="string_attention_success">关注成功</string>
    <string name="string_attention_error">关注失败</string>
    <string name="string_filter_camomile">日剧</string>
    <string name="string_filter_cold">清秀</string>
    <string name="string_filter_habana">减龄</string>
    <string name="string_filter_lzp">自然</string>
    <string name="string_filter_happy">跳跃</string>
    <string name="string_filter_elegance">雅致</string>
    <string name="string_filter_harvest">深秋</string>
    <string name="string_filter_miss">橘子</string>
    <string name="string_filter_red">聚焦</string>
    <string name="string_filter_tasty">好味</string>
    <string name="string_filter_turkish">浓郁</string>
    <string name="string_filter_waltz">华尔兹</string>
    <string name="string_filter_west">午后</string>
    <string name="string_filter_print">胶片</string>
    <string name="string_filter_railway">地下铁</string>
    <string name="string_filter_retro">倒带</string>
    <string name="string_filter_1960s">年代</string>
    <string name="string_filter_gray">默片</string>
    <string name="string_edit">编辑</string>
    <string name="string_delete">删除</string>
    <string name="string_up_value_format">UP值&#160;%1$s</string>
    <string name="string_owner_follow">我关注的</string>
    <string name="string_other_follow">TA关注的</string>
    <string name="string_owner_fans">我的粉丝</string>
    <string name="string_other_fans">TA的粉丝</string>
    <string name="string_has_follow">已关注</string>
    <string name="string_follow_with_add">+ 关注</string>
    <string name="string_subscription_with_add">+ 订阅</string>
    <string name="string_can_next_with_agree_tips">同意相关权限之后才能继续操作</string>
    <string name="string_video">视频</string>
    <string name="string_picture">图片</string>
    <string name="string_comment_send_error_tips">你的评论内容「%1$s」不幸在评论区迷路了，是否要重新发送？</string>
    <string name="string_comment_not_find_error">你的评论屡屡走失，重新发一条试试吧…</string>
    <string name="string_back_home_comfire">再按一次退出</string>
    <string name="string_tab_home">首页</string>
    <string name="string_tab_discover">发现</string>
    <string name="string_tab_upload">上传</string>
    <string name="string_tab_message">消息</string>
    <string name="string_tab_message_center">消息中心</string>
    <string name="string_tab_mine">我的</string>
    <string name="string_recommend">推荐</string>
    <string name="string_un_follow_label">取消关注</string>
    <string name="string_publish_success">发布成功!</string>
    <string name="string_publish_error_save_dcim">发布失败，已保存至手机相册</string>
    <string name="string_publish_error_resend">发布失败，请重试</string>
    <string name="string_solitaire_number_format">%1$s条接龙</string>
    <string name="string_save_pic_storage">保存图片到本地</string>
    <string name="string_send_code">发送验证码</string>
    <string name="string_not_install_client">你还未安装客户端</string>
    <string name="string_login_error">登录失败</string>
    <string name="string_login_success">登录成功</string>
    <string name="string_bind_phone_error">绑定手机号失败</string>
    <string name="string_bind_phone_title">绑定手机号</string>
    <string name="string_input_phone_number">请输入绑定手机号</string>
    <string name="string_input_verification_code">请输入验证码</string>
    <string name="string_bind_label">绑定</string>
    <string name="string_please_input_all_phone">请输入当前绑定的完整手机号</string>
    <string name="string_phone_login">手机号登录</string>
    <string name="string_please_input_phone_number">请输入手机号码</string>
    <string name="string_message_notify_label">消息通知</string>
    <string name="string_login_label">登录</string>
    <string name="string_reply_success_tips">回复成功</string>
    <string name="string_please_go_to_solitaire">快去创作接龙鸭</string>
    <string name="string_no_message">暂无互动消息</string>
    <string name="string_luck_to_speak">友善发言的人都会有好运哦</string>
    <string name="string_all_label">全部</string>
    <string name="string_follow_with_you">关注你的人</string>
    <string name="string_like_comment_with_you">喜欢你评论的人</string>
    <string name="string_up_video_wtih_you">UP你视频的人</string>
    <string name="string_bind_phone_format">当前绑定：%1$s</string>
    <string name="string_phone_comfire_label">手机号确认</string>
    <string name="string_edit_current_content">编辑该内容</string>
    <string name="string_change_number_format">还有%1$d次修改机会~</string>
    <string name="string_share_to_friend">分享给朋友</string>
    <string name="string_report_label">举报</string>
    <string name="string_share_wechat_friend_label">微信好友</string>
    <string name="string_share_wechat_circle">朋友圈</string>
    <string name="string_share_qq_friends">QQ好友</string>
    <string name="string_share_qq_place">QQ空间</string>
    <string name="string_share_copy_link">复制链接</string>
    <string name="string_open_link_with_brower">浏览器打开</string>
    <string name="string_want_watch">我想看的</string>
    <string name="string_choose_finish">选好啦</string>
    <string name="string_next_step">下一步</string>
    <string name="stirng_jump_over_label">跳过</string>
    <string name="string_sex_label">性别</string>
    <string name="string_get_you_fav_push_content">了解了你的喜好，推荐内容更贴心</string>
    <string name="string_perfect_self_data">完善个人资料</string>
    <string name="string_boy_label">男生</string>
    <string name="string_girl_label">女生</string>
    <string name="string_want_to_watch">有什么想看的？</string>
    <string name="string_login_after_login">立即登录</string>
    <string name="string_watch_video_in_network">当前为非 Wi-Fi 环境，是否消耗流量继续观看视频</string>
    <string name="string_pause_play_label">暂停播放</string>
    <string name="string_resume_play_label">继续播放</string>
    <string name="string_shoot_my_video">拍摄我的短视频</string>
    <string name="string_allow_to_shoot">允许刷刷看获得以下权限就可以拍摄啦</string>
    <string name="string_allow_camera_permissions">允许获得相机权限</string>
    <string name="string_allow_mic_permissions">允许获得麦克风权限</string>
    <string name="string_allow_album_permissions">允许获得相册权限</string>
    <string name="string_one_click_auth">一键授权</string>
    <string name="string_birthday_label">生日</string>
    <string name="string_share_to_label">分享到</string>
    <string name="string1">1/3</string>
    <string name="string_no_follow">暂无关注</string>
    <string name="string_gress_products_in_here">种草的商品都在这里</string>
</resources>