<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_permission"
    tools:ignore="MissingDefaultResource">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/per_close_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:paddingBottom="10dp"
            android:paddingLeft="14dp"
            android:paddingRight="10dp"
            android:paddingTop="14dp"
            android:src="@drawable/ic_closed" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="128dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_shoot_my_video"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/string_allow_to_shoot"
                android:textColor="#b6b6b6"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/per_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="75dp"
                android:drawablePadding="9.6dp"
                android:text="@string/string_allow_camera_permissions"
                android:textColor="#ffff20"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/per_voice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="33dp"
                android:drawablePadding="9.6dp"
                android:text="@string/string_allow_mic_permissions"
                android:textColor="#ffff20"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/per_album"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="33dp"
                android:drawablePadding="9.6dp"
                android:text="@string/string_allow_album_permissions"
                android:textColor="#ffff20"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/per_request_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_margin="15dp"
            android:background="@drawable/bg_permission_btn"
            android:gravity="center"
            android:text="@string/string_one_click_auth"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>
</FrameLayout>
