<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_perfect_info"
    tools:context=".ui.perfectinfo.PrefectNormalInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/perfect_nick_go"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="40dp"
                android:alpha="0.5"
                android:text="@string/stirng_jump_over_label"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/string_perfect_self_data"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/perfect_info_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="40dp"
            android:text="@string/string_sex_label"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <RadioGroup
            android:id="@+id/info_radio_group"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/bg_radio_group"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/sel_sex_left_radio"
                android:button="@null"
                android:gravity="center"
                android:text="@string/string_boy_label"
                android:textColor="@drawable/sel_tv_color_sex"
                android:textSize="16sp" />

            <View
                android:id="@+id/info_divider"
                android:layout_width="1dp"
                android:layout_height="38dp"
                android:layout_gravity="center_vertical"
                android:background="@color/white_30" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/sel_sex_right_radio"
                android:button="@null"
                android:gravity="center"
                android:text="@string/string_girl_label"
                android:textColor="@drawable/sel_tv_color_sex"
                android:textSize="16sp" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/string_birthday_label"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <FrameLayout
            android:id="@+id/time_pick_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/info_next_btn"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_prefect_info_btn"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/string_next_step"
            android:textColor="@color/ricebook_color_1"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>
