<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/empty_iv"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/empty_states" />

    <TextView
        android:id="@+id/empty_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/string_no_follow"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/empty_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6.5dp"
        android:text="@string/string_gress_products_in_here"
        android:textColor="@color/color_normal_838791"
        android:textSize="14sp" />


    <TextView
        android:id="@+id/empty_button"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_not_follow"
        android:gravity="center"
        android:text="@string/string_login_after_login"
        android:textColor="@color/ricebook_color_1"
        android:textSize="12sp"
        android:textStyle="bold"
        android:visibility="gone" />
</LinearLayout>
