<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_select_hobby_cc_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/title_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/fragment_select_hobby_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fragment_select_hobby_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:gravity="center_vertical"
            android:text="@string/string_want_watch"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/fragment_select_hobby_back"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fragment_select_hobby_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:gravity="center_vertical"
            android:text="@string/stirng_jump_over_label"
            android:textColor="@color/white_50"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/fragment_select_hobby_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/title_layout">

        <TextView
            android:id="@+id/fragment_select_hobby_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:text="@string/string_want_to_watch"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/perfect_nick_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:text="@string/string1"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_select_hobby_tv_title"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/fragment_select_hobby_tv_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/string_get_you_fav_push_content"
            android:textColor="@color/color_normal_838791"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/fragment_select_hobby_tv_title"
            app:layout_constraintTop_toBottomOf="@id/fragment_select_hobby_tv_title" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/fragment_select_hobby_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/fragment_select_hobby_tv_subtitle" />

        <Button
            android:id="@+id/fragment_select_hobby_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_start_chain"
            android:text="@string/string_choose_finish"
            android:textColor="@color/ricebook_color_1"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/fragment_select_hobby_rv" />

    </android.support.constraint.ConstraintLayout>

    <include
        android:id="@+id/fragment_select_hobby_error_view"
        layout="@layout/profile_timeline_errorview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/title_layout" />

</android.support.constraint.ConstraintLayout>
