<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_wifi_bg">

    <TextView
        android:id="@+id/tip_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="31.5dp"
        android:layout_marginRight="31.5dp"
        android:layout_marginTop="15.5dp"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="7sp"
        android:text="@string/string_watch_video_in_network"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/middle_divider"
        android:layout_width="wrap_content"
        android:layout_height="0.5dp"
        android:layout_marginTop="25dp"
        android:background="@color/white_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tip_view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/wifi_tip_divider"
        android:showDividers="middle"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/middle_divider">

        <Button
            android:id="@+id/stop_play_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/string_pause_play_label"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/continue_play_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/string_resume_play_label"
            android:textColor="@android:color/white"
            android:textSize="14sp" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
